--- a/2019-10-ISEM/2019-10-ISEM.html
+++ b/2019-10-ISEM/2019-10-ISEM.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
-    <title>Presentation of the new High-Performance-Cluster</title>
+    <title>2019-10-ISEM.utf8</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Patrick Schratz" />
-    <link href="libs/font-awesome-5.3.1/css/fontawesome-all.min.css" rel="stylesheet" />
-    <link href="libs/tabwid-1.0.0/tabwid.css" rel="stylesheet" />
-    <script src="libs/tabwid-1.0.0/tabwid.js"></script>
+    <meta name="author" content="" />
+    <link href="libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
+    <link href="libs/tabwid/tabwid.css" rel="stylesheet" />
+    <script src="libs/tabwid/tabwid.js"></script>
     <link rel="stylesheet" href="assets/css/xaringan.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/custom.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/tachyons.min.css" type="text/css" />
@@ -429,11 +429,13 @@ Which features are most important for predicting **defoliation**?
 
 ## Which features are most important for predicting **defoliation**?
 
-&lt;center&gt;&lt;img src="https://pogomonster.files.wordpress.com/2014/08/work-in-progress-sign.png" width = "320px"&gt;&lt;/center&gt;
+&lt;center&gt;&lt;img src="imgs/work-in-progress-sign.png" width = "320px"&gt;&lt;/center&gt;
 
 <i class="fas  fa-arrow-right "></i> Paper will be submitted soon
 
 <i class="fas  fa-arrow-right "></i> Idea: Relate most important variables (permutation-based VarImp) to spectral regions
+
+.img-credit[img credit https://pogomonster.files.wordpress.com/2014/08/work-in-progress-sign.png]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
