--- a/2019-10-ISEM/2019-10-ISEM.html
+++ b/2019-10-ISEM/2019-10-ISEM.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
-    <title>2019-10-ISEM.utf8</title>
+    <title>x</title>
     <meta charset="utf-8" />
-    <meta name="author" content="" />
+    <meta name="author" content="x" />
     <link href="libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
     <link href="libs/tabwid/tabwid.css" rel="stylesheet" />
     <script src="libs/tabwid/tabwid.js"></script>
