update title for browser

--- a/2019-10-ISEM/2019-10-ISEM.html
+++ b/2019-10-ISEM/2019-10-ISEM.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
-    <title>x</title>
+    <title>ISEM 2019</title>
     <meta charset="utf-8" />
     <meta name="author" content="x" />
     <link href="libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
