--- a/2019-10-ISEM/2019-10-ISEM.html
+++ b/2019-10-ISEM/2019-10-ISEM.html
@@ -4,9 +4,9 @@
     <title>ISEM 2019</title>
     <meta charset="utf-8" />
     <meta name="author" content="x" />
-    <link href="libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
-    <link href="libs/tabwid/tabwid.css" rel="stylesheet" />
-    <script src="libs/tabwid/tabwid.js"></script>
+    <link href="libs/font-awesome-5.3.1/css/fontawesome-all.min.css" rel="stylesheet" />
+    <link href="libs/tabwid-1.0.0/tabwid.css" rel="stylesheet" />
+    <script src="libs/tabwid-1.0.0/tabwid.js"></script>
     <link rel="stylesheet" href="assets/css/xaringan.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/custom.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/tachyons.min.css" type="text/css" />
@@ -58,7 +58,7 @@ ISEM 2019, October 4th 2019, Salzburg, Austria
 layout: true
 
 .footer[
-slides: kutt.it/ISEM 
+slides.pjs-web.de/ISEM
 ]
 
 ---
