upd logo position

--- a/2019-10-ISEM/2019-10-ISEM.html
+++ b/2019-10-ISEM/2019-10-ISEM.html
@@ -4,9 +4,9 @@
     <title>ISEM 2019</title>
     <meta charset="utf-8" />
     <meta name="author" content="x" />
-    <link href="libs/font-awesome-5.3.1/css/fontawesome-all.min.css" rel="stylesheet" />
-    <link href="libs/tabwid-1.0.0/tabwid.css" rel="stylesheet" />
-    <script src="libs/tabwid-1.0.0/tabwid.js"></script>
+    <link href="libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
+    <link href="libs/tabwid/tabwid.css" rel="stylesheet" />
+    <script src="libs/tabwid/tabwid.js"></script>
     <link rel="stylesheet" href="assets/css/xaringan.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/custom.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/tachyons.min.css" type="text/css" />
@@ -122,7 +122,7 @@ Study Design
 
 # Workflow
 
-- Usage of the **R** programming language
+- Usage of the <i class="fab  fa-r-project "></i> programming language
 
 - Completely **reproducible**
 
@@ -130,7 +130,7 @@ Study Design
 
 - Model fitting/evaluation via the .pkg[mlr] package (machine learning framework in R)
 
-- Research compendioum on [Github](https://github.com/pat-s/2019-feature-selection) and [Zenodo](https://zenodo.org/record/2633102)
+- Research compendium on [Github](https://github.com/pat-s/2019-feature-selection) and [Zenodo](https://zenodo.org/record/2633102)
 
 ---
 
