--- a/2019-10-ISEM/2019-10-ISEM.html
+++ b/2019-10-ISEM/2019-10-ISEM.html
@@ -57,7 +57,7 @@ ISEM 2019, October 4th 2019, Salzburg, Austria
 
 layout: true
 
-.footer[
+.slide-link[
 slides.pjs-web.de/ISEM
 ]
 
@@ -89,8 +89,6 @@ slides.pjs-web.de/ISEM
 - AUR package maintainer
 
 ]
-
-
 
 ---
 
