--- a/2019-10-ISEM/2019-10-FSU.html
+++ b/2019-10-ISEM/2019-10-FSU.html
@@ -58,7 +58,7 @@ GIScience Kolloquium, October 30th 2019, Jena, Germany
 layout: true
 
 .slide-link[
-slides.pjs-web.de/ISEM
+bit.ly/19-10-FSU
 ]
 
 ---
